# OmniLaTeX-template

./: .dockerignore  .editorconfig  .env.docker  .env.example.cloudflare  .envrc  .flake8  .gitignore  .latexmkrc  .markdownlint.json  .pre-commit-config.yaml  BUILD_SYSTEM_IMPROVEMENT_PLAN.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  CTAN_README.txt  Dockerfile  FONT_CREDITS.md  LICENSE  Makefile  README.md  ROADMAP-ARCHIVED-v1.1.md  ROADMAP-ARCHIVED-v1.5.md  ROADMAP-DETAILED.md  ROADMAP-MASTER.md  ROADMAP-PATH-FORWARD.md  ROADMAP-PRODUCTION-FINAL.md  ROADMAP-PRODUCTION.md  ROADMAP-v1.1.md  ROADMAP-v2.md  ROADMAP-v3.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VERSION.md  build.lua  build.py  devcontainer.json.example  docker-compose.yml.example  flake.nix  main.tex  (+5 more)
tests/: .gitignore  Makefile  README.md  config.yml  conftest.py  constants.py  pyproject.toml  run_module_tests.py  test_accessibility.py  test_accessibility_checker.py  test_beamer_regression.py  test_build_py.py  test_buildlib_builder.py  test_buildlib_builder_extra.py  test_buildlib_check_lint.py  test_buildlib_cli.py  test_buildlib_commands.py  test_buildlib_commands_extended.py  test_buildlib_concurrency.py  test_buildlib_config.py  test_buildlib_coverage.py  test_buildlib_diff.py  test_buildlib_integration.py  test_buildlib_plugin.py  test_buildlib_plugin_commands.py  test_buildlib_preflight_test.py  test_buildlib_properties.py  test_buildlib_runner.py  test_buildlib_tui.py  test_buildlib_ui.py  test_commands.py  test_config.py  test_coverage_batch2.py  test_ctan.py  test_edge_cases.py  test_modules.py  (+12 more)
(+1319 files in other folders)
