[tool.poetry]
name = "tests"
version = "4.0.0"
description = "Test suite for OmniLaTeX universal document class"
authors = ["WyattAu <wyattau@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.23.5"
pytest = ">=7.4,<10.0"
PyYAML = "^6.0"
python-dateutil = "^2.8.1"
PaperSize = "^1.3.0"
hypothesis = "^6.0"
pytest-timeout = "^2.0"
pytest-cov = "^5.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
black = "^23.3"

[tool.coverage.run]
source = ["buildlib"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 72
show_missing = true
skip_empty = true

[tool.pytest.ini_options]
testpaths = ["."]
markers = [
    "slow: tests requiring LaTeX compilation (deselect with -m 'not slow')",
    "timeout: pytest-timeout marker",
]
timeout = 30

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
